@@ -97,6 +97,9 @@ Library
 - Issue #21513: Speedup some properties of IP addresses (IPv4Address,
   IPv6Address) such as .is_private or .is_multicast.
 
+- Issue #21137: Improve the repr for threading.Lock() and its variants
+  by showing the "locked" or "unlocked" status.  Patch by Berker Peksag.
+
 - Issue #21538: The plistlib module now supports loading of binary plist files
   when reference or offset size is not a power of two.
 
